--- a/app-version.json
+++ b/app-version.json
@@ -1,5 +1,5 @@
 {
-  "latestVersion": "1.0.1",
-  "apkUrl": "https://seninsiten.com/indir/esportspulse.apk",
+  "latestVersion": "1.0.",
+  "apkUrl": "https://pulsemobile.vercel.app/indir/esportspulse.apk",
   "changelog": "İlk sürüm yayınlandı. Temel özellikler ve canlı skorlar eklendi."
 } 
